modify team members

--- a/team.html
+++ b/team.html
@@ -38,8 +38,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Best team ever</div>
-                <div class="masthead-heading text-uppercase">Our team</div>
+                <div class="masthead-subheading">Meet Our Team</div>
+                <div class="masthead-heading text-uppercase">Join Our Family</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a Member</a>
             </div>
         </header>
@@ -48,17 +48,17 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Worldwide recognized professionals waiting to meet you!</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
-                            <h4>Kay Garland</h4>
+                            <h4>Anne Yovinski</h4>
                             <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -66,9 +66,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
                             <h4>Larry Parker</h4>
                             <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -76,9 +76,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
                             <h4>Diana Petersen</h4>
                             <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -91,8 +91,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Our actitivites</h2>
+                    <h3 class="section-subheading text-muted">Click on each activity to discover more details</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -101,11 +101,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 1 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Aikido</div>
+                                <div class="portfolio-caption-heading">Karate</div>
+                                <div class="portfolio-caption-subheading text-muted">Shotokan</div>
                             </div>
                         </div>
                     </div>
@@ -115,11 +115,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 2 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Karate</div>
+                                <div class="portfolio-caption-heading">Aikido</div>
+                                <div class="portfolio-caption-subheading text-muted">Aikikai</div>
                             </div>
                         </div>
                     </div>
@@ -129,11 +129,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 3 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Jiu-Jitsu</div>
+                                <div class="portfolio-caption-subheading text-muted">Gi/No Gi</div>
                             </div>
                         </div>
                     </div>
@@ -143,11 +143,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="a man dressed in a white martial arts kimono raising his leg while doing a martial arts pose." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 4 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Kids</div>
+                                <div class="portfolio-caption-subheading text-muted">For the little ones</div>
                             </div>
                         </div>
                     </div>
@@ -157,11 +157,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 5 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Women</div>
+                                <div class="portfolio-caption-subheading text-muted">Growing community for women in MA</div>
                             </div>
                         </div>
                     </div>
@@ -171,11 +171,11 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="a man standing up straight in a white martial arts kimono and with his hands on his hips" />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Activity 6 Name</div>
-                                <div class="portfolio-caption-subheading text-muted">Activity Category</div>
+                                <div class="portfolio-caption-heading">Bootcamp</div>
+                                <div class="portfolio-caption-subheading text-muted">Prepare your next competition with us</div>
                             </div>
                         </div>
                     </div>
