modify team members info and websites

--- a/team.html
+++ b/team.html
@@ -55,30 +55,30 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
                             <h4>Anne Yovinski</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+                            <p class="text-muted">Karate Teacher</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://facebook.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+                            <h4>James Doland</h4>
+                            <p class="text-muted">Aikido Teacher</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://facebook.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="twitter.com!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="linkedin.com"><i class="fab fa-linkedin-in"></i></a>
+                            <h4>Marcus Phelan</h4>
+                            <p class="text-muted">Jiu-Jitsu Teacher</p>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://facebook.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
