--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-subheading">Meet Our Team</div>
-                <div class="masthead-heading text-uppercase">Join Our Family</div>
+                <div class="masthead-heading text-uppercase">Join The Family</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a Member</a>
             </div>
         </header>
