correct bvalidator errors about button

--- a/index.html
+++ b/index.html
@@ -345,11 +345,9 @@
                                         <li>Mon - Sat: 2pm - 8pm</li>
                                         <li>Category: Aikido</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -376,11 +374,9 @@
                                         <li>Mon - Sat: 10am - 7pm</li>
                                         <li>Category: Jiu-Jitsu</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -407,11 +403,9 @@
                                         <li>Mon - Sat: 10am - 5pm</li>
                                         <li>Category: Kids Classes</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -438,11 +432,9 @@
                                         <li>Mon - Sat: 8am - 10am</li>
                                         <li>Category: Martial Arts</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -469,11 +461,9 @@
                                         <li>Mon - Sat: 8am - 10am</li>
                                         <li>Category: Bootcamp</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
