--- a/team.html
+++ b/team.html
@@ -38,8 +38,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Meet Our Team</div>
-                <div class="masthead-heading text-uppercase">Join The Family</div>
+                <div class="masthead-subheading">Today is The Day</div>
+                <div class="masthead-heading text-uppercase">Meet Our Team</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="./registration.html">Become a Member</a>
             </div>
         </header>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Anne, James and Marcus are our teachers at Martial Arts House. All of them are recognized experts in their field and over the years they have met and trained +2000 students in our Dublin academy. They feel very passionate and enthusiastic about their jobs and they will make sure to adapt to your level and needs while making your time at Martial Arts house very enjoyable!</p></div>
                 </div>
             </div>
         </section>
@@ -187,7 +187,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We are happy to answer any question for you!</h3>
                 </div>
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
                     <div class="row align-items-stretch mb-5">
