--- a/activities-schedule.html
+++ b/activities-schedule.html
@@ -49,7 +49,7 @@
           <div class="container">
               <div class="text-center">
                   <h2 class="section-heading text-uppercase">Activites Schedule</h2>
-                  <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                  <h3 class="section-subheading text-muted">Find the time that works best for you!</h3>
               </div>
               <div class="container theme-showcase">
                   <div id="holder" class="row" ></div>
