--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
+                                <img class="img-fluid" src="assets/img/portfolio/karate.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Karate</div>
@@ -112,7 +112,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
+                                <img class="img-fluid" src="assets/img/portfolio/aikido.jpg" alt="a men in a white martial arts kimono holding two black clubs doing a martial arts posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Aikido</div>
@@ -126,7 +126,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
+                                <img class="img-fluid" src="assets/img/portfolio/jiujitsu.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Jiu-Jitsu</div>
@@ -140,7 +140,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="a man dressed in a white martial arts kimono raising his leg while doing a martial arts pose." />
+                                <img class="img-fluid" src="assets/img/portfolio/kids.jpg" alt="a kid with a white martial arts kimono raising his toe and hands while doing a martial arts posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Kids</div>
@@ -154,7 +154,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
+                                <img class="img-fluid" src="assets/img/portfolio/women.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Women</div>
@@ -168,7 +168,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="a man standing up straight in a white martial arts kimono and with his hands on his hips" />
+                                <img class="img-fluid" src="assets/img/portfolio/bootcamp.jpg" alt="two man with white martial arts kimonos grappling on the floor while the teacher watches." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Bootcamp</div>
@@ -188,7 +188,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/feesfirst.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees1.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Pay & Go</h4>
@@ -198,7 +198,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees2.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Starter Pack</h4>
@@ -208,7 +208,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees3.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Members Plan</h4>
@@ -218,7 +218,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees4.jpg" alt="" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Free Pass</h4>
@@ -309,7 +309,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Karate</h2>
                                     <p class="item-intro text-muted">Shotokan</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/karate.jpg" alt="" />
                                     <p>Shotokan is a style of karate, founded in 1938 and developed from various martial arts by Gichin Funakoshi and his son Gigo Funakoshi. Karate practice strengthens the mind, develops composure, a clearer thought process, deeper insight into one's mental capabilities, and more self-confidence.</p>
                                     <ul class="list-inline">
                                         <li>April 2021</li>
@@ -338,7 +338,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Aikido</h2>
                                     <p class="item-intro text-muted">Aikikai</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/aikido.jpg" alt="" />
                                     <p>The Aikikai is the original school of Aikido and was founded in 1948. It is centered on the Aikikai Foundation in Japan, and its figurehead is the Doshu (the family heir of the founder of Aikido).</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2021</li>
@@ -367,7 +367,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Jiu-Jitsu</h2>
                                     <p class="item-intro text-muted">Gi/No Gi</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/jiujitsu.jpg" alt="" />
                                     <p>Jiu-Jitsu is a self-defence martial art and combat sport based on grappling and submission holds. It focuses on the skill of taking an opponent to the ground, controlling one's opponent, gaining a dominant position and using a number of techniques to force them into submission via joint locks or chokeholds.</p>
                                     <ul class="list-inline">
                                         <li>Date: May 2021</li>
@@ -396,7 +396,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Kids Classes</h2>
                                     <p class="item-intro text-muted">Classes for the little ones of our family</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/kids.jpg" alt="" />
                                     <p>Our kids classes are designed for the little ones in our families. There is many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2021</li>
@@ -425,7 +425,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Women</h2>
                                     <p class="item-intro text-muted">Growing community for women in MA</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/women.jpg" alt="" />
                                     <p>We are a growing community of more than 200 women in Martial Arts. In this space you will start, continue and master your skills in a challenging and motivating environment.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
@@ -454,7 +454,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Bootcamp</h2>
                                     <p class="item-intro text-muted">Prepare your next competition with us</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bootcamp.jpg" alt="" />
                                     <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
