update portfolio pics

--- a/team.html
+++ b/team.html
@@ -91,8 +91,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our actitivites</h2>
-                    <h3 class="section-subheading text-muted">Click on each activity to discover more details</h3>
+                    <h2 class="section-heading text-uppercase">What's new this month</h2>
+                    <h3 class="section-subheading text-muted">Check our classes</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -101,7 +101,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
+                                <img class="img-fluid" src="assets/img/portfolio/karate.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Karate</div>
@@ -115,7 +115,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
+                                <img class="img-fluid" src="assets/img/portfolio/aikido.jpg" alt="a men in a white martial arts kimono holding two black clubs doing a martial arts posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Aikido</div>
@@ -129,7 +129,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt="a men in a white Karate kimono holding two black clubs doing a martial arts pose." />
+                                <img class="img-fluid" src="assets/img/portfolio/jiujitsu.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Jiu-Jitsu</div>
@@ -143,7 +143,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="a man dressed in a white martial arts kimono raising his leg while doing a martial arts pose." />
+                                <img class="img-fluid" src="assets/img/portfolio/kids.jpg" alt="a kid with a white martial arts kimono raising his toe and hands while doing a martial arts posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Kids</div>
@@ -157,7 +157,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art pose" />
+                                <img class="img-fluid" src="assets/img/portfolio/women.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art posture." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Women</div>
@@ -171,7 +171,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="a man standing up straight in a white martial arts kimono and with his hands on his hips" />
+                                <img class="img-fluid" src="assets/img/portfolio/bootcamp.jpg" alt="two man with white martial arts kimonos grappling on the floor while the teacher watches." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Bootcamp</div>
